[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "study-productivity-openenv"
version = "1.0.0"
description = "OpenEnv reference environment for study productivity task management."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "OpenEnv Team" }
]
dependencies = []

[tool.setuptools]
py-modules = ["inference"]
